src/snapshots/csvs_convert__converters__tests__base_zip.snap
---
source: src/lib.rs
assertion_line: 187
expression: merge_datapackage_json(file_with_fixtures).unwrap()
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    schema:
      fields:
        - name: id
          type: number
          count: 4
        - name: title
          type: string
          count: 4
      primaryKey: _link
    path: csv/games.csv

