src/snapshots/csvs_convert__converters__tests__conflict_types_folder.snap
---
source: src/lib.rs
assertion_line: 191
expression: "merge_datapackage_json(vec![format! (\"fixtures/{datapackage1}\"), format!\n                            (\"fixtures/{datapackage2}\")]).unwrap()"
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    schema:
      fields:
        - name: id
          type: string
          count: 4
        - name: title
          type: string
          count: 4
      primaryKey: _link
    path: csv/games.csv

