src/snapshots/csvs_convert__converters__tests__parquet_dates_from_csvs.snap
---
source: src/converters.rs
expression: res
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: parquet_date
    row_count: 1
    schema:
      fields:
        - name: rfc3339
          type: datetime
          format: rfc3339
        - name: rfc3339not
          type: datetime
          format: rfc3339
        - name: spark
          type: datetime
          format: "%Y-%m-%dT%H:%M:%S%.f"
        - name: nofracsec
          type: datetime
          format: "%Y-%m-%dT%H:%M:%S%.f"
        - name: sparknot
          type: datetime
          format: "%Y-%m-%d %H:%M:%S%.f"
        - name: nofracnotimezone
          type: datetime
          format: "%Y-%m-%d %H:%M:%S%.f"
        - name: ukdate
          type: datetime
          format: "%m/%d/%Y %H:%M:%S"
    path: fixtures/parquet_date.csv
    dialect:
      delimiter: ","
      quoteChar: "\""

