src/snapshots/csvs_convert__converters__tests__parquet_from_csvs.snap
---
source: src/converters.rs
expression: data
snapshot_kind: text
---
- - id
  - "1"
- - title
  - game1_add_resource
- - id
  - "2"
- - title
  - game2_add_resource
